--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI-Powered Document Insight Tool</title>
+    <title>AI-Powered Resume Insight Tool</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
